--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  build36:
     docker:
       - image: circleci/python:3.7
     working_directory: ~/repo
@@ -20,3 +20,31 @@ jobs:
       - store_artifacts:
           path: test-reports
           destination: test-reports
+
+  build37:
+    docker:
+      - image: circleci/python:3.7
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - run:
+          name: install dependencies
+          command: |
+            python3 -m venv venv
+            . venv/bin/activate
+            pip install -e .[test]
+      - run:
+          name: run tests
+          command: |
+            . venv/bin/activate
+            py.test test
+      - store_artifacts:
+          path: test-reports
+          destination: test-reports
+
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build36
+      - build37
